--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ body {
 
 .header-section {
   padding: 23px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.67), rgba(0, 0, 0, 0.67)), url("../img/header-bg.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.67), rgba(0, 0, 0, 0.67)), url("img/header-bg.jpg");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
